--- a/bst.html
+++ b/bst.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style.css">
   <style>
     #tree-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-      flex-wrap: wrap;
+      position: relative;
+      width: 100%;
+      min-height: 600px;
+      margin-top: 40px;
     }
 
     .node {
-      display: inline-block;
+      position: absolute;
       background-color: #4CAF50;
       color: white;
       border-radius: 50%;
@@ -22,42 +22,57 @@
       height: 40px;
       text-align: center;
       line-height: 40px;
-      margin: 10px;
       font-weight: bold;
-      transition: transform 0.3s, background-color 0.3s;
+      transition: all 0.3s ease;
     }
 
     .node.inserted {
       background-color: #ff9800;
-      transform: scale(1.3);
+      transform: scale(1.2);
     }
 
     .node.deleted {
       background-color: #f44336;
       opacity: 0.4;
     }
+
+    svg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: visible;
+      z-index: 0;
+    }
+
+    line {
+      stroke: #555;
+      stroke-width: 2;
+    }
   </style>
 </head>
 <body>
   <h1>Binary Search Tree Visualizer</h1>
-
-  <input type="number" id="valueInput" placeholder="Enter value" />
+  <input type="number" id="valueInput" placeholder="Enter value">
   <button onclick="insert()">Insert</button>
   <button onclick="remove()">Delete</button>
 
-  <div id="tree-container"></div>
+  <div id="tree-container">
+    <svg id="svg-lines"></svg>
+  </div>
 
   <script>
-    // === BST Node Class ===
     class Node {
       constructor(value) {
         this.value = value;
         this.left = null;
         this.right = null;
+        this.x = 0;
+        this.y = 0;
       }
     }
 
-    // === BST Logic ===
     class BST {
       constructor() {
         this.root = null;
@@ -65,7 +80,7 @@
 
       insert(value) {
         this.root = this._insertRec(this.root, value);
-        renderTree();
+        updateTree();
         highlightNode(value, 'inserted');
       }
 
@@ -78,19 +93,17 @@
 
       delete(value) {
         this.root = this._deleteRec(this.root, value);
-        renderTree();
+        updateTree();
       }
 
       _deleteRec(node, value) {
         if (!node) return null;
-
         if (value < node.value) node.left = this._deleteRec(node.left, value);
         else if (value > node.value) node.right = this._deleteRec(node.right, value);
         else {
           if (!node.left) return node.right;
           if (!node.right) return node.left;
 
-          // Node with two children
           const minLargerNode = this._minValue(node.right);
           node.value = minLargerNode.value;
           node.right = this._deleteRec(node.right, minLargerNode.value);
@@ -99,13 +112,11 @@
       }
 
       _minValue(node) {
-        let current = node;
-        while (current.left) current = current.left;
-        return current;
+        while (node.left) node = node.left;
+        return node;
       }
     }
 
-    // === Global Tree Instance ===
     const bst = new BST();
 
     function insert() {
@@ -121,25 +132,62 @@
       }
     }
 
-    // === Render Tree ===
-    function renderTree() {
+    function updateTree() {
       const container = document.getElementById('tree-container');
-      container.innerHTML = '';
-      renderNode(container, bst.root);
+      const svg = document.getElementById('svg-lines');
+      container.querySelectorAll('.node').forEach(n => n.remove());
+      svg.innerHTML = '';
+
+      const positions = [];
+      assignCoordinates(bst.root, 0, 0, 500, positions);
+      renderNodes(bst.root, container, svg, positions);
     }
 
-    function renderNode(container, node) {
+    function assignCoordinates(node, depth, offsetX, width, positions) {
       if (!node) return;
+
+      const x = offsetX + width / 2;
+      const y = depth * 80 + 20;
+
+      node.x = x;
+      node.y = y;
+      positions.push({ node, x, y });
+
+      assignCoordinates(node.left, depth + 1, offsetX, width / 2, positions);
+      assignCoordinates(node.right, depth + 1, offsetX + width / 2, width / 2, positions);
+    }
+
+    function renderNodes(node, container, svg, positions) {
+      if (!node) return;
+
+      if (node.left) {
+        drawLine(svg, node.x, node.y, node.left.x, node.left.y);
+      }
+      if (node.right) {
+        drawLine(svg, node.x, node.y, node.right.x, node.right.y);
+      }
+
       const div = document.createElement('div');
       div.className = 'node';
-      div.textContent = node.value;
       div.id = `node-${node.value}`;
+      div.style.left = `${node.x}px`;
+      div.style.top = `${node.y}px`;
+      div.textContent = node.value;
       container.appendChild(div);
-      renderNode(container, node.left);
-      renderNode(container, node.right);
+
+      renderNodes(node.left, container, svg, positions);
+      renderNodes(node.right, container, svg, positions);
     }
 
-    // === Animation Highlight ===
+    function drawLine(svg, x1, y1, x2, y2) {
+      const line = document.createElementNS('http://www.w3.org/2000/svg', 'line');
+      line.setAttribute('x1', x1 + 20); // center of circle
+      line.setAttribute('y1', y1 + 20);
+      line.setAttribute('x2', x2 + 20);
+      line.setAttribute('y2', y2 + 20);
+      svg.appendChild(line);
+    }
+
     function highlightNode(value, className) {
       setTimeout(() => {
         const node = document.getElementById(`node-${value}`);
